--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@firebase/app": "^0.6.30",
-    "firebase": "^8.10.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "@babel/runtime": "^7.15.3",
+    "@firebase/app": "0.6.30",
+    "@material-ui/core": "4.12.3",
+    "@material-ui/styles": "4.11.4",
+    "@types/react": "17.0.19",
+    "firebase": "8.10.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-router-dom": "5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
