--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.15.3",
-    "@firebase/app": "0.6.30",
+    "@firebase/app": "^0.7.0",
     "@material-ui/core": "4.12.3",
     "@material-ui/styles": "4.11.4",
     "@types/react": "17.0.19",
-    "firebase": "8.10.0",
+    "firebase": "^9.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.13.0",
     "react-router-dom": "5.2.0"
   },
   "scripts": {
